--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,6 +19,19 @@
                 </li>
 
             </ul>
+            <ul class="nav justify-content-end">
+                <li routerLinkActive="active" class="nav-item">
+                    <a class="nav-link text-dark" routerLink="home">Home</a>
+                </li>
+                <li routerLinkActive="active" class="nav-item">
+                    <a class="nav-link text-dark" routerLink="register">Register</a>
+                </li>
+                <li routerLinkActive="active" class="nav-item">
+                    <a class="nav-link text-dark" routerLink="/login">Login</a>
+                </li>
+
+
+            </ul>
         </div>
     </div>
 </nav>
